--- a/styles.css
+++ b/styles.css
@@ -203,16 +203,15 @@ body {
     height: 85%;
     border: 2px solid #afbe8a;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 18rem 18rem 18rem;
     grid-template-rows: 0.5fr 1fr 1fr;
     padding: 0 1rem 2rem 1rem;
     grid-gap: 1rem;
     justify-items: center;
 }
 
-#hobbies-text img{
+#hobbies-text img {
     width: 18rem;
-    height: 12rem;
     border-radius: 5px;
 }
 
@@ -229,6 +228,7 @@ body {
 
 #hobbies-text p {
     font-size: 1rem;
+    width: 18rem;
     color: #D8E9A8;
     text-align: justify;
     font-weight: 300;
