--- a/styles.css
+++ b/styles.css
@@ -204,10 +204,11 @@ body {
     border: 2px solid #afbe8a;
     display: grid;
     grid-template-columns: 18rem 18rem 18rem;
-    grid-template-rows: 0.5fr 1fr 1fr;
+    grid-template-rows: 7rem 16rem 16rem;
     padding: 0 1rem 2rem 1rem;
     grid-gap: 1rem;
     justify-items: center;
+    max-width: 60%;
 }
 
 #hobbies-text img {
