--- a/styles.css
+++ b/styles.css
@@ -204,7 +204,7 @@ body {
     border: 2px solid #afbe8a;
     display: grid;
     grid-template-columns: auto auto auto;
-    grid-template-rows: 0.5fr auto auto;
+    grid-template-rows: auto auto auto;
     padding: 0 1rem 2rem 1rem;
     gap: 1rem;
     justify-items: center;
