--- a/styles.css
+++ b/styles.css
@@ -252,7 +252,7 @@ body {
 }
 
 #skills-text h2 {
-    margin-bottom: 20px;
+    margin-bottom: 1rem;
     text-transform: uppercase;
     text-decoration: underline;
     font-size: 3rem;
@@ -267,7 +267,7 @@ body {
 }
 
 #skills-text h3 {
-    margin: 0 0 0 20px;
+    margin: 0 0 0 1rem;
     text-transform: lowercase;
     font-style: italic;
     font-size: 1.5rem;
@@ -279,49 +279,49 @@ body {
 
 #skills-text ul {
     color: #D8E9A8;
-    margin: 40px 0 0 0;
+    margin: 2rem 0 0 0;
     text-align: start;
     width: 100%;
     font-size: 0.9rem;
 }
 
 #skills-text h3:nth-of-type(2) {
-    margin: 0 290px 0 0;
-    text-transform: lowercase;
-    font-style: italic;
-    font-size: 1.5rem;
-    color: #D8E9A8;
-    font-weight: 400;
-    font-family: 'DM Sans', sans-serif ;
+    /*!*margin: 0 0rem 0 0;*!*/
+    /*text-transform: lowercase;*/
+    /*!*font-style: italic;*!*/
+    /*font-size: 1.5rem;*/
+    /*color: #D8E9A8;*/
+    /*font-weight: 400;*/
+    /*font-family: 'DM Sans', sans-serif ;*/
 }
 
 
 #skills-text img {
-    margin-right: 30px;
+    margin-right: 1.5rem;
     float: right;
     width: 35%;
 }
 
 #skills-text img:nth-of-type(2) {
-    margin: 40px 0 0 50px;
+    margin: 2rem 0 0 3rem;
     clear: both;
     float: left;
     width: 35%;
 }
 
 #skills-text ul:nth-of-type(2) {
-    color: #D8E9A8;
-    margin: 10px 20px 0 0;
-    text-align: start;
-    width: 50%;
-    clear: both;
-    float: none;
-    font-size: 0.9rem;
+    /*color: #D8E9A8;*/
+    /*margin: 10px 20px 0 0;*/
+    /*text-align: start;*/
+    /*width: 50%;*/
+    /*clear: both;*/
+    /*float: none;*/
+    /*font-size: 0.9rem;*/
 }
 
 #soft {
-    margin-top: 40px;
-    margin-right: 40px;
+    margin-top: 2rem;
+    margin-right: 3rem;
     width: 50%;
     float: right;
 }
@@ -378,6 +378,6 @@ body {
 #contact h4 {
     margin: 0;
     position: relative;
-    top: 9rem;
+    top: 8rem;
 }
 
